# RIMEL-UCA.github.io

./: .gitmodules  Gemfile  README.md  _config.yml  archives.html  chapters.markdown  chapters.md  code.html  huggingface_models.json  index.html  index.md  models_datas.json  noteblog.html  notebook.xml  publications.html  publish.sh  tags.html  teaching.md
Détection de la paternité grâce aux directives #ifdef/: content.md
ToRemove/: tags.html  tools.md
_includes/: bib.html  chapterHeader.html  footer.html  header.html  navbar.html  postexcerpt.html  postheader.html  postsummary.html  sidebar_footer.html
_layouts/: chapter.html  default.html  post.html
_plugins/: redirects.rb
_posts/: 2019-12-29-welcome-to-jekyll.markdown  2020-01-02-new-chapter.markdown  (+6 more)
chapters/2026/Comment_Performer_Sur_Kaggle/assets/kaggle-analyze-specialization/: .env.example  book.md  pyproject.toml  requirements.txt
chapters/2026/Comment_Performer_Sur_Kaggle/assets/kaggle-analyze-specialization/data/: filtered_competitions.csv  specialization_matrix.csv  tops.json
chapters/2026/Comment_Performer_Sur_Kaggle/assets/kaggle-analyze-specialization/src/: webscrap.py
chapters/2026/Comment_Performer_Sur_Kaggle/assets/kaggle-analyze-specialization/src/kaggle/: analyze_specialization.py  kaggle-api-call-test.py  visualize_specialization.py
chapters/2026/Comment_Performer_Sur_Kaggle/assets/kaggle-analyze-specialization/src/scrapers/: base.py
chapters/2026/Comment_Performer_Sur_Kaggle/assets/kaggle-analyze-specialization/webscrap_kaggle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+9735 files in other folders)
