[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-analyze-specialization"
version = "0.1.0"
description = "Projet de web scraping"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
    "parsel>=1.8.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "fake-useragent>=1.4.0",
    "tenacity>=8.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"
